--- a/scss/styles_no7.scss
+++ b/scss/styles_no7.scss
@@ -1,5 +1,4 @@
-$no7color: #888888;
-$no7color1: #7D070A;
+$no7color: #bbbbbb;
 $no7color2: #004466;
 $no7color3: #E4E5E6;
 
@@ -16,8 +15,13 @@ body.no7{
   	overflow: hidden;
 }
 .wrapper-no7{
+	display: flex;
+    justify-content: center;
 	.animation-wrapper{
-		display:flex;
+		display: flex;
+		&.notvisible{
+			display: none;
+		}
 	}
 	.cat{
 		width: 80%;
@@ -39,28 +43,151 @@ body.no7{
 		align-self: flex-end;
 		margin-left: -25px;
 		font-size: 45px;
-	}
+	} 
 	.logo{
 		font-size: 55px;
 		opacity: 0;
 		position: absolute;
 		top:-40px;
-		left:40px;
 		&.visible{
 			opacity: 1;
 			top:40px;
 			transition: all 1s;
 		}
 	}
-	.loader,
-	.loading-bar{
-		width: 100%;
-		height: 10px;
-		background-color: $no7color;
-		border-radius: 16px;
+	.restart{
+		display: none;
+    	position: absolute;
+    	top: 50%;
+    	font-size: 20px;
+    	background-color: white;
+    	border: $no7color 1px solid;
+    	box-shadow: none;
+    	padding: 20px;
+    	border-radius: 10px;
+    	&:hover{
+    		background-color: #ddd;
+    	}
+		&.visible{
+			display: block;
+		}
 	}
-	.loader{
-		background-color: $no7color2;
-		width: 0%;
+	.layout{
+		display: block;
+		opacity: 1;
+		width: 80%;
+		position: absolute;
+		top: 40px;
+		transition: opacity 1s;
+		&.notvisible{
+			display: none;
+			opacity: 0;
+		}
+		li{
+			height: 15px;
+			background-color: $no7color;
+		}
+		ul{
+			display:flex;
+			margin: 0;
+			padding: 0;
+		}
+		li{
+			width: 50px;
+			margin-left: 20px;
+			list-style: none;
+			background-color: $no7color;
+		}
+		.layout__nav{
+			display: flex;
+			justify-content: space-between;
+
+		}
+		.layout__nav-left,
+		.layout__nav-right{
+			width: 40%;
+		}
+		.layout__nav-left{
+			li:first-child{
+				margin-left: 0;
+			}
+		}
+		.layout__nav-right{
+			flex-direction: row-reverse;
+		}
+		.layout__title{
+			width: 80%;
+			height: 40px;
+			background-color: $no7color;
+			margin-top: 150px;
+			margin-left: auto;
+			margin-right: auto;
+		}
+		.layout__content{
+			display: flex;
+			justify-content: center;
+			flex-direction: column;
+			align-items: center;
+			div{
+				&:first-child{
+					margin-top: 100px;
+				}
+				width: 80%;
+				height: 20px;
+				background-color: $no7color;
+				margin-top: 20px;
+			}
+		}
 	}
+	@media screen and (max-width: 500px) {
+  		.layout{
+    		width: 100%;
+  		
+  		.layout__nav,
+  		.layout__nav-left,
+  		.layout__nav-right{
+  			display: none; 
+  		}	
+  		.layout__title{
+  			margin-top: 100px;
+  		}
+  		.layout__content{
+  			div{
+				&:first-child{
+					margin-top: 40px;
+				}
+  			}
+  		}
+  		}
+	}
+	@media screen and (max-width: 768px) {		
+  		.layout{
+    		width: 100%;
+  
+	  		.layout__title{
+	  			margin-top: 100px;
+	  		}
+	  		.layout__content{
+	  			div{
+					&:first-child{
+						margin-top: 40px;
+						}
+	  				}
+	  			}
+	  		.layout__title{
+	  			margin-top: 70px;
+	  		}
+	  		.layout__nav{
+	  			margin-top: 20px;
+	  		}
+	  		.layout__nav-left,
+			.layout__nav-right{
+				width: 35%;
+			}
+  		}
+  		.logo{
+  			font-size: 45px;
+  		}
+	
+}
 }  
