--- a/css/styles_no8.css
+++ b/css/styles_no8.css
@@ -1,22 +1,132 @@
 body.no8 {
-  height: 100vh;
-  font-family: 'Delius Swash Caps', cursive;
+  min-height: 100vh;
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 400;
   text-align: center;
   color: black;
-  background: #E4E5E6;
+  background: #E7E8E9;
   display: flex;
   align-items: center;
-  justify-content: center;
-  overflow: hidden; }
+  justify-content: center; }
 
 .wrapper-no8 {
   width: 80%;
   /* svg{
-		width: 50px;
+		width: 500px;
 		height: auto;
-		display: none;}
+	}
 
-	.flame1{	
+	.wave{
+		opacity: 0.5;
+	}
+
+	.whale{
+		opacity: 0.8;
+		animation: 5s ease-in infinite whale; 
+	}
+
+	.flosse{
+		animation: 1s ease-in infinite flosse;
+	}
+
+	.fluid,
+	.fluid-3{
+		animation: 2s ease-in infinite wave;
+	}
+	.fluid-2,
+	.fluid-7{
+		animation: 3s ease-in infinite wave;
+	}
+
+	.fluid-4,
+	.fluid-5{
+		animation: 2.5s ease-in infinite wave;
+	}
+	.fluid-6{
+		animation: 1s ease-in infinite wave;
+	}
+
+
+
+	@keyframes whale {
+		0% { 
+			transform: translateY(800px);
+		}
+		100% { 
+			transform: translateY(-800px); 
+		}
+	 }
+
+	 @keyframes flosse {
+		0% { 
+			transform-origin: 45% 100%;
+			transform: rotate(0deg);
+		}
+		50% { 
+			transform-origin: 45% 100%;
+			transform: rotate(5deg);
+		}
+		75% { 
+			transform-origin: 45% 100%;
+			transform: rotate(-5deg); 
+		}
+		100% { 
+			transform-origin: 45% 100%;
+			transform: rotate(0deg); 
+		}
+	 }
+
+	 @keyframes wave {
+		0% { 
+			opacity: 0;
+		}
+		50% { 
+			opacity: 1; 
+		}
+		100% { 
+			opacity: 0; 
+		}
+	 } */
+  /* .fluid{
+		animation: 3s ease-in infinite fluid;
+	} */
+  /* .bubble,
+	.bubble-3,
+	.bubble-8{
+		animation: 3s ease-in infinite up;
+	}
+
+	.bubble-2,
+	.bubble-4,
+	.bubble-5{
+		animation: 2s ease-in infinite up;
+		transform: scale(2);
+	}
+	.bubble-6,
+	.bubble-7{
+		animation: 1s ease-in infinite up;
+	}
+
+	@keyframes fluid {
+		0% { 
+			transform: translateX(500px);
+		}
+		100% { 
+			transform: translateX(-100px); 
+		}
+	 }
+	 @keyframes up {
+		0% { 
+			opacity: 0;
+			transform: translateY(500px);
+		}
+		100% {
+			opacity: 0.8;
+			transform: translateY(-300px); 
+		}
+	 }
+ */
+  /* .flame1{	
 		.right{
 			animation: 0.5s ease-in 0.2s infinite alternate-reverse both flame2;			
 		}
@@ -53,8 +163,26 @@ body.no8 {
 			animation: 5s ease-in 0.3s infinite rauch;			
 		}
 	} */ }
+  .wrapper-no8 .text-wrapper {
+    padding: 5% 0;
+    border-bottom: 1px solid black; }
+    .wrapper-no8 .text-wrapper:last-of-type {
+      border-bottom: none; }
   .wrapper-no8 .paragraph {
-    font-size: 16px; }
+    font-size: 16px;
+    line-height: 20px;
+    margin: 1rem 0 0; }
+  .wrapper-no8 .title-2 {
+    font-size: 35px;
+    margin: 0;
+    font-weight: 500; }
+    .wrapper-no8 .title-2 .burnit::before {
+      height: 25px;
+      transform: translateY(20px); }
+    .wrapper-no8 .title-2 .beer::before,
+    .wrapper-no8 .title-2 .water::before {
+      height: 35px;
+      transform: translateY(35px); }
   .wrapper-no8 .burnit {
     overflow: hidden;
     position: relative;
@@ -78,6 +206,59 @@ body.no8 {
       .wrapper-no8 .burnit:hover::before {
         transform: translateY(0px);
         transition: all 0.5s ease-out; }
+  .wrapper-no8 .beer {
+    overflow: hidden;
+    position: relative;
+    color: grey;
+    display: inline-flex; }
+    .wrapper-no8 .beer::before {
+      bottom: 0;
+      opacity: 0.9;
+      left: 0;
+      content: '';
+      position: absolute;
+      height: 20px;
+      min-width: 100%;
+      display: block;
+      transition: all 0.5s ease-out;
+      background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg class='beer' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1500.4 664'%3e%3cstyle type='text/css'%3e svg %7b width: 500px; height: auto;%7d .bubble, .bubble-3, .bubble-8 %7b animation: 3s ease-in infinite up;%7d .bubble-2, .bubble-4, .bubble-5 %7b animation: 2s ease-in infinite up; transform: scale(2);%7d .bubble-6, .bubble-7 %7b animation: 1s ease-in infinite up;%7d %40keyframes fluid %7b 0%25 %7b transform: translateX(500px);%7d 100%25 %7b transform: translateX(-100px);%7d %7d %40keyframes up %7b 0%25 %7b opacity: 0; transform: translateY(500px);%7d 100%25 %7b opacity: 0.8; transform: translateY(-300px);%7d %7d %3c/style%3e%3ctitle%3ebeer%3c/title%3e%3cg class='foam'%3e%3cg%3e%3cpath d='M433.89,577.17A328.87,328.87,0,0,1,1.11,579.74v84.52h526A362.8,362.8,0,0,1,433.89,577.17Z' transform='translate(0.23 -0.26)' style='fill: %23fff'/%3e%3cpath d='M918.81,664.26h29q-5.67-6.08-11.09-12.39Q928,658.33,918.81,664.26Z' transform='translate(0.23 -0.26)' style='fill: %23fff'/%3e%3cpath d='M433.89,577.17a362.8,362.8,0,0,0,93.19,87.1H918.81q9.16-5.93,17.94-12.39,5.41,6.31,11.09,12.39h551.9V100.94a394.71,394.71,0,0,0-526.65.21,360.8,360.8,0,0,0-507.47,7.13h-7.37A328.88,328.88,0,0,0,1.11,81.81V579.74a328.87,328.87,0,0,0,432.78-2.57Z' transform='translate(0.23 -0.26)' style='fill: %23fff'/%3e%3c/g%3e%3crect width='1500.04' height='342' style='fill: %23fff'/%3e%3c/g%3e%3cpath class='fluid' d='M-.1,233.68c0,9.17,98.48,88.34,206.84-12.42,79.79-74.2,250.81-77.2,329.84,17,93.5,111.41,326.22,110.12,438.58-5.38,146.6-150.7,417.08-113.43,524.91,1.74.38.41-.33,429.67-.33,429.67L.08,664S-.1,187.12-.1,233.68Z' transform='translate(0.23 -0.26)' style='fill: %23ffe91d'/%3e%3ccircle class='bubble' cx='118.19' cy='566.45' r='53.12' style='fill: %23fff'/%3e%3ccircle class='bubble-2' data-name='bubble' cx='307.37' cy='420.87' r='92.4' style='fill: %23fff'/%3e%3ccircle class='bubble-3' data-name='bubble' cx='892.36' cy='559.82' r='59.53' style='fill: %23fff'/%3e%3ccircle class='bubble-4' data-name='bubble' cx='497.05' cy='568.58' r='31.8' style='fill: %23fff'/%3e%3ccircle class='bubble-5' data-name='bubble' cx='1220.58' cy='383.07' r='70.64' style='fill: %23fff'/%3e%3ccircle class='bubble-6' data-name='bubble' cx='1065.12' cy='478.45' r='39.31' style='fill: %23fff'/%3e%3ccircle class='bubble-7' data-name='bubble' cx='1361.74' cy='568.37' r='44.08' style='fill: %23fff'/%3e%3ccircle class='bubble-8' data-name='bubble' cx='643.42' cy='440.07' r='45.7' style='fill: %23fff'/%3e%3c/svg%3e");
+      transform: translateY(20px);
+      animation: animatedBackground 5s linear infinite alternate; }
+    .wrapper-no8 .beer:hover {
+      color: black;
+      transition: all 0.75s ease-out; }
+      .wrapper-no8 .beer:hover::before {
+        transform: translateY(0px);
+        transition: all 0.5s ease-out; }
+  .wrapper-no8 .water {
+    overflow: hidden;
+    position: relative;
+    color: grey;
+    display: inline-flex; }
+    .wrapper-no8 .water::before {
+      bottom: 0;
+      opacity: 0.9;
+      left: 0;
+      content: '';
+      position: absolute;
+      height: 25px;
+      min-width: 100%;
+      display: block;
+      transition: all 0.5s ease-out;
+      background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1501.89 664'%3e%3cstyle type='text/css'%3e svg %7b width: 500px; height: auto;%7d .wave %7b opacity: 0.5;%7d .whale %7b opacity: 0.8; animation: 5s ease-in infinite whale;%7d .flosse %7b animation: 1s ease-in infinite flosse;%7d .fluid, .fluid-3 %7b animation: 2s ease-in infinite wave;%7d .fluid-2, .fluid-7 %7b animation: 3s ease-in infinite wave;%7d .fluid-4, .fluid-5 %7b animation: 2.5s ease-in infinite wave;%7d .fluid-6 %7b animation: 1s ease-in infinite wave;%7d %40keyframes whale %7b 0%25 %7b transform: translateY(800px);%7d 100%25 %7b transform: translateY(-800px);%7d %7d %40keyframes flosse %7b 0%25 %7b transform-origin: 45%25 100%25; transform: rotate(0deg);%7d 50%25 %7b transform-origin: 45%25 100%25; transform: rotate(5deg);%7d 75%25 %7b transform-origin: 45%25 100%25; transform: rotate(-5deg);%7d 100%25 %7b transform-origin: 45%25 100%25; transform: rotate(0deg);%7d %7d %40keyframes wave %7b 0%25 %7b opacity: 0;%7d 50%25 %7b opacity: 1;%7d 100%25 %7b opacity: 0;%7d %7d %3c/style%3e%3ctitle%3ewater%3c/title%3e%3cg class='wave'%3e%3crect class='fluid2' x='0.83' width='1500' height='995.98' style='fill: %233ff'/%3e%3c/g%3e%3cg class='whale'%3e%3cpath d='M654.49,43.66c68.77-.13,124.85,167.84,125.25,375.17.27,135.57-22.07,203.2-46.28,270-13.53,37.35-53.7,105.59-77.5,105.63-24,0-51.69-40.86-67.25-77.89C553.6,633,531,554.39,530.71,419.32,530.3,212,585.72,43.8,654.49,43.66Z' transform='translate(1.1 -1.16)' style='fill: %232b3838'/%3e%3cg class='flossevorn'%3e%3cpath d='M539.93,349.09C476.53,480.28,450.56,494.21,430,514.85s-21.25,61.94,1.2,50.66,54.68-33,71.49-50.81c5.3-5.62,40.38-56.19,42.81-76.08C550.77,395.41,539.93,349.09,539.93,349.09Z' transform='translate(1.1 -1.16)' style='fill: %232b3838'/%3e%3cpath d='M774.53,348.63C838.45,479.57,864.47,493.4,885.1,514s21.49,61.86-1,50.67-54.81-32.77-71.69-50.52c-5.32-5.6-40.6-56-43.1-75.91C763.87,395,774.53,348.63,774.53,348.63Z' transform='translate(1.1 -1.16)' style='fill: %232b3838'/%3e%3c/g%3e%3cg class='flosse'%3e%3cpath d='M657.32,725.21l-1-.07v.13c-28.57,2-62.91,2.56-62.91,2.56,20.67,36.16,43.52,94.12,19,105.05C520.06,859.36,502,982.95,507.66,983.28c10.3.6,30-31.55,43.45-40.19,14.61-9.39,38.83-13.65,65.51-10.43,14.95,1.81,22.27-12.63,41.07-12.72s26.18,14.42,41.12,12.56c26.68-3.33,50.91.84,65.55,10.17,13.47,8.58,33.32,40.66,43.61,40,5.66-.35-12.88-123.87-105.39-150-24.52-10.84-8.94-66.37,11.59-102.61,0,0-27.3-2.93-55.87-4.82v-.13Z' transform='translate(1.1 -1.16)' style='fill: %232b3838'/%3e%3c/g%3e%3c/g%3e%3cg class='welle'%3e%3cpath class='fluid' d='M-.1,609.18C-.1,620.9,63.73,687.91,206.74,445c85.89-145.89,295-191.76,447,21.7,97.91,137.5,293.64,285.23,406,137.58,146.6-192.65,332.42-140.36,440.25,6.88' transform='translate(1.1 -1.16)' style='fill: none;stroke: %23fafcfc;stroke-miterlimit: 10;stroke-width: 2px'/%3e%3cpath class='fluid-2' data-name='fluid' d='M1.73,939.31c0,10.1,63.66,67.84,206.28-141.45,85.66-125.7,294.19-165.23,445.78,18.7C751.43,935,946.63,1062.32,1058.68,935.1c146.2-166,331.52-120.94,439.05,5.93' transform='translate(1.1 -1.16)' style='fill: none;stroke: %23fafcfc;stroke-miterlimit: 10;stroke-width: 2px'/%3e%3cpath class='fluid-3' data-name='fluid' d='M3.73,782.62c0,9.83,57.8,66,187.28-137.65,77.77-122.32,267.1-160.78,404.73,18.19,88.65,115.28,265.88,239.15,367.61,115.35,132.74-161.53,301-117.68,398.62,5.77' transform='translate(1.1 -1.16)' style='fill: none;stroke: %23fafcfc;stroke-miterlimit: 10;stroke-width: 2px'/%3e%3cpath class='fluid-4' data-name='fluid' d='M3.73,438.18c0,11.72,63.49,78.73,205.73-164.17C294.89,128.13,502.86,82.26,654,295.71c97.38,137.5,292.06,285.23,403.81,137.58,145.81-192.65,330.63-140.36,437.88,6.88' transform='translate(1.1 -1.16)' style='fill: none;stroke: %23fafcfc;stroke-miterlimit: 10;stroke-width: 2px'/%3e%3cpath class='fluid-5' data-name='fluid' d='M3.73,278.71c0,9.95,63.49,66.84,205.73-139.38C294.89,15.47,502.86-23.48,654,157.75c97.38,116.74,292.06,242.17,403.81,116.81,145.81-163.57,330.63-119.17,437.88,5.84' transform='translate(1.1 -1.16)' style='fill: none;stroke: %23fafcfc;stroke-miterlimit: 10;stroke-width: 2px'/%3e%3cpath class='fluid-6' data-name='fluid' d='M3.73,162.38c0-9.83,63.57-66,206,137.65,85.54,122.32,293.8,160.78,445.18-18.19,97.51-115.28,292.45-239.15,404.35-115.35,146,161.53,331.08,117.68,438.46-5.77' transform='translate(1.1 -1.16)' style='fill: none;stroke: %23fafcfc;stroke-miterlimit: 10;stroke-width: 2px'/%3e%3cpath class='fluid-7' data-name='fluid' d='M3.73,596.82c0-11.72,63.49-78.73,205.73,164.17,85.43,145.89,293.4,191.76,444.58-21.7,97.38-137.5,292.06-285.23,403.81-137.58,145.81,192.65,330.63,140.36,437.88-6.88' transform='translate(1.1 -1.16)' style='fill: none;stroke: %23fafcfc;stroke-miterlimit: 10;stroke-width: 2px'/%3e%3c/g%3e%3c/svg%3e");
+      transform: translateY(25px); }
+    .wrapper-no8 .water:hover {
+      color: black;
+      transition: all 0.75s ease-out; }
+      .wrapper-no8 .water:hover::before {
+        transform: translateY(0px);
+        transition: all 0.5s ease-out; }
+
+@keyframes animatedBackground {
+  from {
+    background-position: 0 0; }
+  to {
+    background-position: 100% 0; } }
 
 /* @keyframes flame1 {
 	0% { opacity: 1; }
