--- a/css/styles_no8.css
+++ b/css/styles_no8.css
@@ -10,159 +10,7 @@ body.no8 {
   justify-content: center; }
 
 .wrapper-no8 {
-  width: 80%;
-  /* svg{
-		width: 500px;
-		height: auto;
-	}
-
-	.wave{
-		opacity: 0.5;
-	}
-
-	.whale{
-		opacity: 0.8;
-		animation: 5s ease-in infinite whale; 
-	}
-
-	.flosse{
-		animation: 1s ease-in infinite flosse;
-	}
-
-	.fluid,
-	.fluid-3{
-		animation: 2s ease-in infinite wave;
-	}
-	.fluid-2,
-	.fluid-7{
-		animation: 3s ease-in infinite wave;
-	}
-
-	.fluid-4,
-	.fluid-5{
-		animation: 2.5s ease-in infinite wave;
-	}
-	.fluid-6{
-		animation: 1s ease-in infinite wave;
-	}
-
-
-
-	@keyframes whale {
-		0% { 
-			transform: translateY(800px);
-		}
-		100% { 
-			transform: translateY(-800px); 
-		}
-	 }
-
-	 @keyframes flosse {
-		0% { 
-			transform-origin: 45% 100%;
-			transform: rotate(0deg);
-		}
-		50% { 
-			transform-origin: 45% 100%;
-			transform: rotate(5deg);
-		}
-		75% { 
-			transform-origin: 45% 100%;
-			transform: rotate(-5deg); 
-		}
-		100% { 
-			transform-origin: 45% 100%;
-			transform: rotate(0deg); 
-		}
-	 }
-
-	 @keyframes wave {
-		0% { 
-			opacity: 0;
-		}
-		50% { 
-			opacity: 1; 
-		}
-		100% { 
-			opacity: 0; 
-		}
-	 } */
-  /* .fluid{
-		animation: 3s ease-in infinite fluid;
-	} */
-  /* .bubble,
-	.bubble-3,
-	.bubble-8{
-		animation: 3s ease-in infinite up;
-	}
-
-	.bubble-2,
-	.bubble-4,
-	.bubble-5{
-		animation: 2s ease-in infinite up;
-		transform: scale(2);
-	}
-	.bubble-6,
-	.bubble-7{
-		animation: 1s ease-in infinite up;
-	}
-
-	@keyframes fluid {
-		0% { 
-			transform: translateX(500px);
-		}
-		100% { 
-			transform: translateX(-100px); 
-		}
-	 }
-	 @keyframes up {
-		0% { 
-			opacity: 0;
-			transform: translateY(500px);
-		}
-		100% {
-			opacity: 0.8;
-			transform: translateY(-300px); 
-		}
-	 }
- */
-  /* .flame1{	
-		.right{
-			animation: 0.5s ease-in 0.2s infinite alternate-reverse both flame2;			
-		}
-		.left{
-			animation: 0.75s ease-in 0.5s infinite alternate-reverse both flame2;			
-		}
-		.middle{
-			animation: 0.75s ease-in 0.5s infinite alternate-reverse both flame3;			
-		}
-		.yellow{
-			animation: 1.5s ease-in 0.5s infinite alternate-reverse both flame4;			
-		}
-		.rauch1{
-			animation: 3s ease-in 0.5s infinite rauch;			
-		}
-	}
-	.flame2{	
-		.right{
-			animation: 0.5s ease-in 0.2s infinite alternate-reverse both flame6;			
-		}
-		.left{
-			animation: 0.5s ease-in 0.2s infinite alternate-reverse both flame2;			
-		}
-		.middle{
-			animation: 1s ease-in 0s infinite alternate-reverse both flame3;			
-		}
-		.yellow{
-			animation: 2s ease-in 0s infinite alternate-reverse both flame7;			
-		}
-		.rauch1{
-			animation: 4s ease-in 0s infinite rauch;			
-		}
-		.rauch2{
-			animation: 5s ease-in 0.3s infinite rauch;			
-		}
-	} */ }
+  width: 80%; }
   .wrapper-no8 .text-wrapper {
     padding: 5% 0;
     border-bottom: 1px solid black; }
@@ -260,149 +108,12 @@ body.no8 {
   to {
     background-position: 100% 0; } }
 
-/* @keyframes flame1 {
-	0% { opacity: 1; }
-	100% { opacity: 0; }
- }
-
- @keyframes flame2 {
-	0% { 
-		transform-origin: left;
-		transform: translate(0%, 0%) rotate(0deg);
-		opacity: 1;
-	}
-	10% { 
-		transform-origin: left;
-		transform: translate(0%, 0%) rotate(0deg);
-	}
-	50% { transform-origin: left;
-		transform: translate(20px, 0px) rotate(5deg);
-	}
-	70% {
-		transform: translate(20px, 50px) rotate(5deg);
-	}
-	90% {
-		transform: translate(10px, 10px) rotate(5deg);
-	}
-	100% { 
-		transform-origin: left;
-		transform: translate(0%, 0%) rotate(0deg); 
-		opacity: 0;
-	}
- }
- @keyframes flame3 {
-	0% { 
-		transform-origin: left;
-		transform: translateY(20px) rotate(0deg);
-		opacity: 1;
-	}
-	10% { 
-		transform-origin: left;
-		transform: translateY(80px) rotate(5deg);
-	}
-	50% { transform-origin: left;
-		transform: translateY(20px) rotate(-3deg);
-	}
-	70% {
-		transform: translateY(20px) rotate(5deg);
-	}
-	90% {
-		transform: translateY(20px) rotate(2deg);
-	}
-	100% { 
-		transform-origin: left;
-		transform: translateY(0) rotate(0deg); 
-		opacity: 0.8;
-	}
- }
- @keyframes flame4 {
-	0% { 
-		transform-origin: 20% 100%;
-		transform: rotate(0deg) scale(0.7);
-		opacity: 1;
-	}
-	10% { 
-		transform: rotate(2deg) scale(0.8);
-	}
-	50% {
-		transform: rotate(-15deg) scale(0.9);
-	}
-	70% {
-		transform: rotate(5deg) scale(1);
-	}
-	90% {
-		transform: rotate(2deg) scale(1);
-	}
-	100% { 
-		transform-origin: 20% 100%;
-		transform: rotate(0deg) scale(1); 
-		opacity: 0.5;
-	}
- }
-
- @keyframes flame6 {
-	0% { 
-		transform: translateY(200px);
-		opacity: 1;
-	}
-	100% { 
-		transform: translateY(-100px); 
-		opacity: 0;
-	}
- }
-
- @keyframes flame2 {
-	0% { 
-		transform-origin: left;
-		transform: translate(0%, 0%);
-		opacity: 1;
-	}
-	70% {
-		transform: translate(0px, 20px);
-	}
-	100% { 
-		transform-origin: left;
-		transform: translate(0%, 0%); 
-		opacity: 0;
-	}
- }
-
- @keyframes flame7 {
-	0% { 
-		transform-origin: 50% 100%;
-		transform: rotate(0deg) scale(0.7);
-		opacity: 1;
-	}
-	10% { 
-		transform: rotate(2deg) scale(0.8);
-	}
-	50% {
-		transform: rotate(-15deg) scale(0.9);
-	}
-	70% {
-		transform: rotate(5deg) scale(1);
-	}
-	90% {
-		transform: rotate(2deg) scale(1);
-	}
-	100% { 
-		transform-origin: 50% 100%;
-		transform: rotate(0deg) scale(1); 
-		opacity: 0.5;
-	}
- }
-
- @keyframes rauch {
-	0% { 
-		transform: translateY(500px) scale(0);
-		opacity: 0;
-	}
-	50% { 
-		transform: translateY(500px) scale(0);
-		opacity: 0;
-	}
-	100% { 
-		transform: translateY(-500px) scale(2); 
-		opacity: 1;
-	}
- } */
+@-moz-document url-prefix() {
+  .wrapper-no8 .title-2 .burnit,
+  .wrapper-no8 .title-2 .beer,
+  .wrapper-no8 .title-2 .water {
+    top: 8px; }
+  .wrapper-no8 .burnit,
+  .wrapper-no8 .beer,
+  .wrapper-no8 .water {
+    top: 4px; } }
