--- a/letter-animation/src/styles/config/_utils.scss
+++ b/letter-animation/src/styles/config/_utils.scss
@@ -7,4 +7,8 @@ $transition-underline: .8s ease width;
 //transitions for underline from center
 $transition-underline-center: all 0.3s ease-in-out 0s;
 
+$widthBird2: 60px;
+$widthBird1: 30px;
+$heightBird2: 33px;
+
 
