--- a/scss/styles_no10.scss
+++ b/scss/styles_no10.scss
@@ -1,5 +1,5 @@
 $no10color: #bbbbbb;
-$no10color2: #004466;
+$no10color2: #003577;
 $no10color3: #E4E5E6;
 
 body.no10{
@@ -15,5 +15,173 @@ body.no10{
   	overflow: hidden;
 }
 .wrapper-no10{
+	.sidebar{
+		width: 400px;
+		height: 100vh;
+		position: fixed;
+		left: 0;
+		top: 0;
+		display: flex;
+		transform: translateX(0px);
+		transition: transform 0.5s linear;
+
+		&.active{
+			transform: translateX(-350px);
+			transition: transform 0.5s linear;
+		}
+	}
+
+	.sidebar__inner{
+		height: 100%;
+    	width: 100%;
+		background: $no10color2;
+	}
+
+	.btn-burger{
+		width: 50px;
+		height: 55px;
+		background: $no10color2;
+		box-shadow: none;
+		border: none;
+		position: relative;
+		position: relative;
+		display: flex;
+		flex-direction: column;
+		padding: 10px;
+		&:focus{
+			outline:0;
+		}
+		&:hover{
+			.btn-burger__line.line3{
+				width: 15px;
+				transform: rotate(25deg) translate(-2px, -3px);
+				margin-right: 15px;
+				transition: all 0.3s linear;
+			}
+			.btn-burger__line.line2{
+				opacity: 1;
+				transition: all 0.3s linear;
+			}
+			.btn-burger__line.line1{
+				width: 15px;
+				transform: rotate(-25deg) translate(-2px, 3px);
+				margin-right: 15px;
+				transition: all 0.3s linear;
+			}
+		}
+
+		.active &{
+			&:hover{
+				.btn-burger__line.line3{
+					width: 15px;
+					transform: rotate(25deg) translate(-2px, -3px);
+					margin-right: 15px;
+					transition: all 0.3s linear;
+				}
+				.btn-burger__line.line2{
+					opacity: 1;
+					transition: all 0.3s linear;
+				}
+				.btn-burger__line.line1{
+					width: 15px;
+					transform: rotate(-25deg) translate(-2px, 3px);
+					margin-right: 15px;
+					transition: all 0.3s linear;
+				}
+			}
+		}
+	}
+	.btn-burger__line.line1{
+		width: 30px;
+		transform: rotate(-45deg) translate(-4px, 6px);
+		margin-right: 0;
+		transition: all 0.3s linear;
+	}
+	.active .btn-burger__line.line1{
+		width: 30px;
+		transform: rotate(0) translate(0);
+		margin-right: 0;
+		transition: all 0.3s linear;
+	}
+	.active .btn-burger:hover .btn-burger__line.line1{
+		width: 15px;
+		transform: rotate(25deg) translate(15px, -3px);
+		margin-right: 0;
+		transition: all 0.3s linear;
+	}
+	.btn-burger__line.line2{
+		opacity: 0;
+		transition: all 0.3s linear;
+	}
+	.active .btn-burger__line.line2{
+		opacity: 1;
+		transition: all 0.3s linear;
+	}
+	.active .btn-burger:hover .btn-burger__line.line2{
+		opacity: 1;
+		transition: all 0.3s linear;
+	}
+
+	.btn-burger__line.line3{
+		width: 30px;
+		transform: rotate(45deg) translate(-4px, -5px);
+		margin-right: 0;
+		transition: all 0.3s linear;
+	} 
+	.active .btn-burger__line.line3{
+		width: 30px;
+		transform: rotate(0deg) translate(0);
+		margin-right: 0;
+		transition: all 0.3s linear;
+	}
+	.active .btn-burger:hover .btn-burger__line.line3{
+		width: 15px;
+		transform: rotate(-25deg) translate(15px, 3px);
+		margin-right: 15px;
+		transition: all 0.3s linear;
+	}
 	
+	.btn-burger__line{
+		width: 30px;
+		height: 2px;
+		margin-bottom: 5px;
+		display: block;
+		background-color: white;
+		&.line3{
+			margin-bottom: 0px;
+			
+		}
+	}
+
+	.btn-burger__txt{
+		position: absolute;
+		bottom: 8px;
+		left: 0;
+		margin-top: 5px;
+		width: 50px;
+		text-align: center;
+		&:after{
+			content: 'close';
+			font-size: 12px;
+			line-height: 12px;
+			color: white;
+			
+		}
+	}
+	.active .btn-burger__txt{
+		&:after{
+			content: 'menu';
+		}
+	}
 }  
+
+@keyframes arrowLeft {
+	0%{
+		transform: rotate(0deg);
+		width: 30px;
+	}
+	100%{
+		transform: rotate(25deg);
+		width: 15px;
+	}
+}
