--- a/css/styles_no12.css
+++ b/css/styles_no12.css
@@ -27,7 +27,7 @@
   .logo-anim.bg {
     background: linear-gradient(0deg, #000000, #b7003c, #ffffff, #ffffff);
     background-size: 500% 500%;
-    animation: 1.5s bg ease forwards; }
+    animation: 1.5s bg 0.5s ease forwards; }
 
 @keyframes bg {
   0% {
