added personal website

--- a/css/styles_no13.css
+++ b/css/styles_no13.css
@@ -7,7 +7,20 @@ body.no13 {
   width: 100vw;
   height: 100vh;
   font-family: 'Roboto', sans-serif;
-  font-weight: 300; }
+  font-weight: 300;
+  cursor: url(../stuff/13/cursor.png), auto; }
+  body.no13.thunderstorm {
+    cursor: url(../stuff/13/cursor-blitz.png), auto; }
+  body.no13.fog {
+    cursor: url(../stuff/13/cursor-fog.png), auto; }
+  body.no13.rain {
+    cursor: url(../stuff/13/cursor-rain.png), auto; }
+  body.no13.snow {
+    cursor: url(../stuff/13/cursor-snow.png), auto; }
+  body.no13.clouds {
+    cursor: url(../stuff/13/cursor-clooud.png), auto; }
+  body.no13.default {
+    cursor: url(../stuff/13/cursor.png), auto; }
   body.no13 button:focus {
     outline: 0; }
 
@@ -20,6 +33,12 @@ body.no13 {
   justify-content: flex-start;
   align-items: flex-start;
   position: relative; }
+  @media screen and (max-width: 600px) {
+    .wrapper-no13 {
+      width: 100vw; } }
+  @media screen and (max-width: 500px) {
+    .wrapper-no13 {
+      height: 90vh; } }
   .wrapper-no13 .initials {
     position: absolute;
     font-weight: 800;
@@ -33,7 +52,31 @@ body.no13 {
     letter-spacing: 2rem;
     display: flex;
     justify-content: center;
-    align-items: center; }
+    align-items: center;
+    cursor: arrow; }
+    @media screen and (max-width: 750px) {
+      .wrapper-no13 .initials {
+        padding-left: 75px;
+        letter-spacing: 8rem;
+        font-size: 400px;
+        align-items: flex-start; } }
+    @media screen and (max-width: 600px) {
+      .wrapper-no13 .initials {
+        padding-left: 0px;
+        letter-spacing: 2rem;
+        margin-left: 0; } }
+    @media screen and (max-width: 500px) {
+      .wrapper-no13 .initials {
+        font-size: 300px;
+        height: auto;
+        letter-spacing: 2rem; } }
+    @media screen and (max-width: 400px) {
+      .wrapper-no13 .initials {
+        font-size: 250px;
+        height: auto; } }
+    @media screen and (max-width: 350px) {
+      .wrapper-no13 .initials {
+        letter-spacing: 1rem; } }
   .wrapper-no13 .text {
     position: relative;
     height: 100%;
@@ -43,18 +86,47 @@ body.no13 {
     margin-right: 20%;
     margin-top: -5px;
     text-align: right; }
+    @media screen and (max-width: 750px) {
+      .wrapper-no13 .text {
+        line-height: 2;
+        padding: 5px 20px;
+        margin-top: 0; } }
+    @media screen and (max-width: 500px) {
+      .wrapper-no13 .text {
+        width: 50%;
+        margin-right: 0;
+        text-align: left;
+        height: 40%;
+        margin-top: 50%; } }
   .wrapper-no13 .text__text {
     font-size: 16px;
     color: #ffffff;
     margin-top: 0;
     margin-bottom: 0;
-    overflow: auto; }
+    overflow: auto;
+    opacity: 1;
+    transform: translateY(0px);
+    transition: all 0.3s ease; }
     .wrapper-no13 .text__text--hidden {
       display: none; }
+    @media screen and (max-width: 750px) {
+      .wrapper-no13 .text__text {
+        font-size: 14px; } }
   .wrapper-no13 .active .text__text {
     display: none; }
   .wrapper-no13 .active .text__text--hidden {
-    display: block; }
+    display: block;
+    opacity: 0;
+    transform: translateY(-20px);
+    transition: all 0.3s ease; }
+  .wrapper-no13 .active-animated .text__text {
+    opacity: 1;
+    transform: translateY(0px);
+    transition: all 0.3s ease; }
+  .wrapper-no13 .active-animated .text__text--hidden {
+    opacity: 1;
+    transform: translateY(0px);
+    transition: all 0.3s ease; }
   .wrapper-no13 .anchor {
     color: #ffffff;
     text-decoration: underline;
@@ -62,7 +134,7 @@ body.no13 {
     box-shadow: transparent;
     text-shadow: none;
     border: none;
-    cursor: pointer; }
+    cursor: none; }
 
 .info {
   position: fixed;
@@ -73,3 +145,35 @@ body.no13 {
   color: #ffffff;
   padding: 12px;
   text-align: center; }
+  @media screen and (max-width: 500px) {
+    .info {
+      text-align: left; } }
+
+.cursor {
+  position: fixed;
+  width: 40px;
+  height: 40px;
+  opacity: 1;
+  top: 0px;
+  left: 0px;
+  border-radius: 50%;
+  background-color: white;
+  opacity: 0.5;
+  z-index: 1;
+  pointer-events: none;
+  transition: all 0.2s ease;
+  transform: translateX(0px) translateY(-2px); }
+  .thunderstorm .cursor {
+    transform: translateX(2px) translateY(2px); }
+  .fog .cursor,
+  .rain .cursor,
+  .snow .cursor,
+  .default .cursor {
+    transform: translateX(5px) translateY(3px); }
+  .cursor.over {
+    background-color: white !important;
+    width: 50px;
+    height: 50px;
+    transform: translateX(-15px) translateY(-15px);
+    transition: all 0.2s ease;
+    opacity: 0.8; }
